[package]
name = "fastarp"
version = "0.1.0"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.22.0"
time = "0.1.42"
users = "0.9.1"
lib_arp = { path = "./lib_arp" }

#reqwest = ["rustls-tls"]

[workspace]
members = [ "lib_arp" ]