[package]
name = "fastarp"
version = "0.1.0"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.25.0"
time = "0.2.23"
users = "0.10.0"
lib_arp = { path = "./lib_arp" }


log = "0.4.8"
env_logger = "0.7.1"


#reqwest = ["rustls-tls"]

[workspace]
members = [ "lib_arp" ]