[package]
name = "fastarp"
version = "0.2.0"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.35.0"
time = "0.3.36"
users = "0.11.0"
lib_arp = { path = "./lib_arp" }

#reqwest = ["rustls-tls"]

[workspace]
members = [ "lib_arp" ]