[package]
name = "lib_arp"
version = "0.1.1"  
authors = ["rust-team <rust-lang-devs@advanceddatamachines.com>"]
edition = "2018"
homepage = "https://www.advanceddatamachines.com"
description = "Daemon, designed to probe, collect and report various network and network device statistics"

[dependencies]
log = "0.4.8" 
env_logger = "0.6.2"

failure = "0.1.5"
serde = "1.0.101"
serde_derive = "1.0.101"
ipnetwork = "0.14.0" 
pnet = "0.22.0"
chrono = "0.4.9"