[package]
name = "lib_arp"
version = "0.1.1"  
authors = ["rust-team <rust-lang-devs@advanceddatamachines.com>"]
edition = "2018"
homepage = "https://www.advanceddatamachines.com"
description = "Daemon, designed to probe, collect and report various network and network device statistics"

[dependencies]
log = "0.4.8"


failure = "0.1.7"
serde = "1.0.106"
serde_derive = "1.0.106"
ipnetwork = "0.15.0" 
pnet = "0.25.0"
chrono = "0.4.11"