[package]
name = "fastarp-core"
version = "0.1.2"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2024"
description = "Fast ARP scanning library for local subnet host discovery"
license = "MIT"
repository = "https://github.com/sjbeskur/fastarp"
keywords = ["arp", "network", "scanner"]
categories = ["network-programming"]

[dependencies]
log = "0.4.8"
env_logger = "0.11.5"
ipnetwork = "0.20.0"
pnet = "0.35.0"
