[package]
name = "fastarp"
version = "0.2.1"
authors = ["sjbeskur <sam.beskur@gmail.com>"]
edition = "2024"
description = "Fast ARP network scanner for local subnet host discovery"
license = "MIT"
repository = "https://github.com/sjbeskur/fastarp"
keywords = ["arp", "network", "scanner"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
fastarp-core = { version = "0.1.2", path = "../fastarp-core" }
clap = { version = "4", features = ["derive"] }
pnet = "0.35.0"
log = "0.4.8"
env_logger = "0.11"
